# multi-agent-architecture

./: .gitignore  README.md  debug_full_file_path.txt  fetch_repo.py  github_comment_generator.py  main.py  pr-19479.patch  pyproject.toml  requirements.txt  test.py
agents/: __init__.py  bug_detector.py  reviewer.py  style_checker.py
config/: settings.py
graph/: __init__.py  builder.py  models.py  search.py
graph/logs/sample_repo/: repo_graph.json
multi_agent_architecture.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sample_repo/llm/: models.py  utils.py  vua_utils.py
sample_repo/llm/default_plugins/: openai_models.py
scripts/: apply_patch.sh  repo_clone.sh
teams/: __init__.py  specialised_team.py
tools/: search_tools.py  static_analysis_tool.py
utils/: __init__.py  codebase_fetcher.py  knowledge_setup.py  patch_fetcher.py
workflows/: __init__.py  team_workflow.py
